@@ -7,6 +7,7 @@ ghash_init.o
 ghash_insert.o
 ghash_rebuild.o
 ghash_rehash.o
+ghash_remove.o
 ghash_search.o
 gqueue_pop.o
 gqueue_push.o
